octsympy 2.2.3-dev
==================

  * sym('var') is more robust in case var happens to be a special
    value in SymPy.  Now sym('E') is just a symbol rather than
    exp(sym(1)).  Also sym('E1') and sym('Eq') no longer give errors.

  * Fix bug in assigning to column vectors, thanks to Grzegorz Dudziuk.

  * During install, test for PATH problems on Windows (issue #236).



octsympy 2.2.2 (2015-07-03)
===========================

  * Fix for configure script using Python 3 (thanks Vadim Gribanov).

  * Fourier transform fixes (thanks Alexander Misel, Andrés Prieto).
    They now follow the non-unitary angular frequency convention.

  * Support for SymPy 0.7.7.dev version.

  * Add some warnings to the documentation about unreliable results
    for "dsolve" on systems and from Fourier transforms.

  * Start using "print_usage" for invalid inputs as is common
    practice in Octave.

  * Bug fixes and update doctests.



octsympy 2.2.1 (2015-04-22)
===========================

  * Fix an ascii pretty printing regression (issue #234).

  * Other minor fixes for doctests, sympref and symreplace.



octsympy 2.2.0 (2015-04-20)
===========================

  * New commands:

          catalan
          eulergamma
          lambertw

  * Installing symbolic package now check for Python and minimum
    version of SymPy (thanks Carnë Draug for autoconf).

  * Installations from Octave-Forge ("pkg install -forge symbolic")
    should now work on Windows (thanks vassbu).  You will need the
    Python and SymPy dependencies.  Or you can use the [bundled
    package](https://github.com/cbm755/octsympy/releases)

  * Added support for Python 3 (still works with Python 2 as well).

  * Documentation improvements especially to assumptions.  Examples
    within documentation can now be tested with doctests, see the
    `octsympy_doctests.m` function.

  * Fix a warning on Octave 4.0.0-rc1 and make tests work properly.
