@@ -1,6 +1,11 @@
 octsympy 2.2.3-dev
 ==================
 
+  * New commands:
+
+          cross
+          dot
+
   * sym('var') is more robust in case var happens to be a special
     value in SymPy.  Now sym('E') is just a symbol rather than
     exp(sym(1)).  Also sym('E1') and sym('Eq') no longer give errors.
